--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,16 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hadoop.version>3.0.0</hadoop.version>
     <java.version>1.8</java.version>
-    <parquet.version>1.9.0</parquet.version>
+    <parquet.version>1.9.0-cdh6.2.0</parquet.version>
     <kotlin.version>1.3.61</kotlin.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>Cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
